Fix multiple errors and removed non-working features for now